# spt-mod-manager

./: .gitignore  Cargo.toml  Cross.toml  readme.md
sptmm_console/: Cargo.toml
sptmm_console/src/: main.rs
sptmm_desktop/: Cargo.toml
sptmm_desktop/src/: main.rs  mod_configuration.rs  mod_configurations.rs  mod_entry.rs  mods.rs
sptmm_lib/: Cargo.toml
sptmm_lib/src/: cache_access.rs  configuration_access.rs  lib.rs  path_access.rs  remote_mod_access.rs  shared_traits.rs  spt_access.rs  time_access.rs
sptmm_lib/src/remote_mod_access/: cache_mod_access.rs  github_mod_repository.rs  html_parsers.rs  mod_version_downloader.rs  spt_client.rs  spt_mod_repository.rs
sptmm_lib/src/remote_mod_access/cache_mod_access/: cached_mod.rs  cached_mod_version.rs  mod_manifest.rs
sptmm_lib/test_data/: cfg_mods.json  google_download.html  real_spt_mods.json  spt_external_download.html
src/: cache_mod_access.rs  configuration_access.rs  configuration_manager.rs  file_manager.rs  main.rs  mod_downloader.rs  mod_installer.rs  mod_manager.rs  remote_mod_access.rs  shared_traits.rs  sp_tarkov.rs  spt_access.rs  time_access.rs
src/cache_mod_access/: cached_mod.rs  cached_mod_version.rs  mod_manifest.rs
src/file_manager/: cached_mod.rs  cached_mod_version.rs  mod_manifest.rs
src/mod_downloader/: github_client.rs  html_parsers.rs  mod_version_downloader.rs  spt_client.rs
src/remote_mod_access/: github_client.rs  html_parsers.rs  mod_version_downloader.rs  spt_client.rs
src/remote_mod_access/cache_mod_access/: mod_manifest.rs
src/spt_access/: zip_data.rs
test_data/: cfg_mods.json  spt_mods.json  spt_versions.html
