[package]
name = "spt_mod_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
dircpy = "0.3.16"
git2 = "0.18.3"
indicatif = "0.17.8"
octocrab = "0.38.0"
reqwest = "0.12.4"
scraper = "0.19.0"
tokio = { version =  "1.38.0", features = ["rt", "macros"] }
tokio-macros = "~2.3.0"
winnow = { version =  "0.6.9", features = ["default", "simd"] }
log = "0.4.21"
chrono = "0.4.38"
