[package]
name = "spt_mod_sync"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
indicatif = "0.17.8"
octocrab = "0.38.0"
reqwest = { version =  "0.12.4", features = ["default", "stream"] }
scraper = "0.19.0"
tokio = { version =  "1.38.0", features = ["rt", "macros", "rt-multi-thread"] }
winnow = { version =  "0.6.13", features = ["default", "simd"] }
chrono = "0.4.38"
once_cell = "1.19.0"
url = "2.5.0"
serde = { version = "1.0.203", features = ["default", "derive"] }
serde_json = "1.0.117"
versions = {version = "6.2.0", features = ["serde"]}
bytes = "1.6.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
walkdir = "2.5.0"
mockall = "0.12.1"
sha256 = "1.5.0"
compress-tools = { git = "https://github.com/OSSystems/compress-tools-rs.git", branch = "master" }
zip = "2.1.3"