[package]
name = "sptmm_lib"
version = "0.8.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
octocrab = "0.38.0"
reqwest = { version = "0.12.5", features = ["default"] }
scraper = "0.19.0"
tokio = { version = "1.38.0", features = ["default", "test-util", "macros"] }
winnow = { version = "0.6.13", features = ["default", "simd"] }
chrono = "0.4.38"
once_cell = "1.19.0"
url = "2.5.2"
serde = { version = "1.0.204", features = ["default", "derive"] }
serde_json = "1.0.120"
versions = { version = "6.3.0", features = ["serde"] }
bytes = "1.6.0"
walkdir = "2.5.0"
mockall = "0.12.1"
sha256 = "1.5.0"
compress-tools = {version = "0.15.0"}
zip = "2.1.3"
directories-next = "2.0.0"