[package]
name = "sptmm_lib"
version = "0.8.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
octocrab = "0.39.0"
reqwest = { version = "0.12.5", features = ["default"] }
scraper = "0.19.1"
tokio = { version = "1.39.2", features = ["default", "test-util", "macros"] }
winnow = { version = "0.6.18", features = ["default", "simd"] }
chrono = "0.4.38"
once_cell = "1.19.0"
url = "2.5.2"
serde = { version = "1.0.204", features = ["default", "derive"] }
serde_json = "1.0.122"
versions = { version = "6.3.0", features = ["serde"] }
bytes = "1.7.1"
walkdir = "2.5.0"
mockall = "0.13"
sha256 = "1.5.0"
compress-tools = {version = "0.15.1", features = ["tokio_support"]}
zip = "2.1.6"
directories-next = "2.0.0"