[package]
name = "sptmm_lib"
version = "0.8.1"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
octocrab = "0.41.2"
reqwest = { version = "0.12.5", features = ["default"] }
scraper = "0.20.0"
tokio = { version = "1.40.0", features = ["default", "test-util", "macros"] }
winnow = { version = "0.6.20", features = ["default", "simd"] }
chrono = "0.4.38"
once_cell = "1.20.2"
url = "2.5.2"
serde = { version = "1.0.204", features = ["default", "derive"] }
serde_json = "1.0.123"
versions = { version = "6.3.2", features = ["serde"] }
bytes = "1.7.2"
walkdir = "2.5.0"
mockall = "0.13"
sha256 = "1.5.0"
compress-tools = {version = "0.15.1", features = ["tokio_support"]}
zip = "2.2.0"
directories-next = "2.0.0"